--- a/style.css
+++ b/style.css
@@ -1,78 +1,62 @@
 *{
-    padding: 0px;
-    margin: 0px;
     font-family: sans-serif;
+    color: white;
 }
 body{
+    background-color: rgba(0, 0, 0, 0.87);
     height: 100vh;
-    background-color: black;
     display: flex;
-    align-items: center;
     justify-content: center;
-}
-.container{
-    width: 80%;
-    height: 80%;
-    background-color: rgba(255,255,255,0.1);
-    border-radius: 20px;
+    align-items: center;
 }
 body::after{
     content: '';
-    width: 100%;
-    height: 100%;
     background-color: red;
     position: absolute;
-    clip-path:circle(35% at right 70%);
+    width: 100%;
+    height: 100%;
+    clip-path: circle(40% at right 70%);
     z-index: -1;
 }
+.container{
+    width:80%;
+    height: 80%;
+    background-color: rgba(0, 0, 0, 0.672);
+    border-radius: 20px;
+}
 nav{
+    width:80%;
     height: 20%;
     display: flex;
-    padding: 15px;
+    align-items:center;
     justify-content: space-between;
-    align-items: center;
+    margin: auto;
 }
 ul{
     display: flex;
     list-style-type: none;
-    position: relative;
+}
+li{
+    padding: 10px;
 }
 a{
     text-decoration: none;
-    padding: 5px;
-    color: white;
 }
-#adidas{
-    font-size: 25px;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-}
-nav ul li a:hover{
-    color: green;
+ul li a:hover{
+    color: red;
 }
 .content{
-    display: flex;
-    justify-content: space-between;
     width: 80%;
-    height:80%;
+    height: 80%;
     margin: auto;
+    display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 .text{
-    color: white;
     width: 40%;
-    height: 40%;
 }
-h2{
-    font-size: 40px;
-    text-transform: uppercase;
-}
-p{
-    font-size: 18px;
-    line-height: 25px;
-    letter-spacing: 1px;
-}
-.content .image{
+image{
     width: 40%;
 }
 img{
@@ -80,22 +64,23 @@ img{
 }
 @media(max-width:950px){
     nav{
+        padding: 5px;
+        display: flex;
         flex-direction: column;
-        height:10%;
     }
     .content{
+        display: flex;
         flex-direction: column;
-        justify-content: center;
     }
-    .content .image{
-        width: 100%;
+    .image{
+        z-index: 1;
     }
-    .content .text{
+    .text{
+        height:20%;
         width: 100%;
-        height:40%;
         z-index: 2;
     }
     body::after{
-        clip-path:circle(50% at bottom);
+        clip-path: circle(50% at Bottom);
     }
 }
